--- a/index.html
+++ b/index.html
@@ -23,27 +23,21 @@
           <a href="#contact">Contato</a>
         </li>
       </ul>
-      <div class="hamburger-menu">
-        <input id="menu__toggle" type="checkbox" />
-        <label class="menu__btn" for="menu__toggle">
-          <span></span>
-        </label>
-        <ul class="menu__box">
-          <li><a class="menu__item" href="#about">Sobre</a></li>
-          <li><a class="menu__item" href="#project">Projetos</a></li>
-          <li><a class="menu__item" href="#contact">Contato</a></li>
-        </ul>
-      </div>
     </nav>
   </header>
 
   <main>
+
+    <div type="button" class="scrollTopButton" onclick="toTop()">
+      <i class="fa-solid fa-arrow-up"></i>
+    </div>
     
     <article id="hero" class="hero-container">
       <div class="hero">
         <div class="hero-info">
-          <h1>Front-End React Developer <i class="spock fa-regular fa-hand-spock"></i></h1>
-          <p>Oi, me chamo Leonardo, sou um jovem apaixonado por front-end.</p>
+          <h1>Olá, sou o Leonardo <i class="spock fa-regular fa-hand-spock"></i></h1>
+          <h2>Sou um <span class="dev-text">Desenvolvedor Front-End</span></h2>
+          <p class="personal">Fome de conhecimento, autodidatismo, honestidade e disciplína.</p>
           <div class="social-icons">
             <a target="_blank" href="https://www.linkedin.com/in/leonardo-mello-silvestri-941504151/"><i class="fa-brands fa-linkedin"></i></a>
             <a target="_blank" href="https://github.com/LeonardoMelloSilvestri"><i class="fa-brands fa-github"></i></a>
@@ -57,6 +51,7 @@
     </article>
 
     <article class="tech-container">
+      <h1>Tech Stack</h1>
       <div class="icon-list">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128"><path fill="#E44D26" d="M19.037 113.876L9.032 1.661h109.936l-10.016 112.198-45.019 12.48z"/><path fill="#F16529" d="M64 116.8l36.378-10.086 8.559-95.878H64z"/><path fill="#EBEBEB" d="M64 52.455H45.788L44.53 38.361H64V24.599H29.489l.33 3.692 3.382 37.927H64zm0 35.743l-.061.017-15.327-4.14-.979-10.975H33.816l1.928 21.609 28.193 7.826.063-.017z"/><path fill="#fff" d="M63.952 52.455v13.763h16.947l-1.597 17.849-15.35 4.143v14.319l28.215-7.82.207-2.325 3.234-36.233.335-3.696h-3.708zm0-27.856v13.762h33.244l.276-3.092.628-6.978.329-3.692z"/></svg>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128"><path fill="#1572B6" d="M18.814 114.123L8.76 1.352h110.48l-10.064 112.754-45.243 12.543-45.119-12.526z"/><path fill="#33A9DC" d="M64.001 117.062l36.559-10.136 8.601-96.354h-45.16v106.49z"/><path fill="#fff" d="M64.001 51.429h18.302l1.264-14.163H64.001V23.435h34.682l-.332 3.711-3.4 38.114h-30.95V51.429z"/><path fill="#EBEBEB" d="M64.083 87.349l-.061.018-15.403-4.159-.985-11.031H33.752l1.937 21.717 28.331 7.863.063-.018v-14.39z"/><path fill="#fff" d="M81.127 64.675l-1.666 18.522-15.426 4.164v14.39l28.354-7.858.208-2.337 2.406-26.881H81.127z"/><path fill="#EBEBEB" d="M64.048 23.435v13.831H30.64l-.277-3.108-.63-7.012-.331-3.711h34.646zm-.047 27.996v13.831H48.792l-.277-3.108-.631-7.012-.33-3.711h16.447z"/></svg>
@@ -70,7 +65,6 @@
         <svg version="1.0" viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg" fill="#092e20"><path d="M59.448 0h20.93v96.88c-10.737 2.04-18.62 2.855-27.181 2.855-25.551-.001-38.87-11.551-38.87-33.705 0-21.338 14.135-35.2 36.015-35.2 3.398 0 5.98.272 9.106 1.087zm0 48.765c-2.446-.815-4.485-1.086-7.067-1.086-10.6 0-16.717 6.523-16.717 17.939 0 11.145 5.845 17.26 16.582 17.26 2.309 0 4.212-.136 7.202-.542z"/><path d="M113.672 32.321V80.84c0 16.717-1.224 24.735-4.893 31.666-3.398 6.661-7.883 10.873-17.124 15.494l-19.435-9.241c9.242-4.35 13.726-8.153 16.58-14 2.99-5.979 3.943-12.91 3.943-31.122V32.321zM92.742.111h20.93v21.474h-20.93z"/></svg>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128"><path fill="#659AD3" d="M115.4 30.7L67.1 2.9c-.8-.5-1.9-.7-3.1-.7-1.2 0-2.3.3-3.1.7l-48 27.9c-1.7 1-2.9 3.5-2.9 5.4v55.7c0 1.1.2 2.4 1 3.5l106.8-62c-.6-1.2-1.5-2.1-2.4-2.7z"/><path fill="#03599C" d="M10.7 95.3c.5.8 1.2 1.5 1.9 1.9l48.2 27.9c.8.5 1.9.7 3.1.7 1.2 0 2.3-.3 3.1-.7l48-27.9c1.7-1 2.9-3.5 2.9-5.4V36.1c0-.9-.1-1.9-.6-2.8l-106.6 62z"/><path fill="#fff" d="M85.3 76.1C81.1 83.5 73.1 88.5 64 88.5c-13.5 0-24.5-11-24.5-24.5s11-24.5 24.5-24.5c9.1 0 17.1 5 21.3 12.5l13-7.5c-6.8-11.9-19.6-20-34.3-20-21.8 0-39.5 17.7-39.5 39.5s17.7 39.5 39.5 39.5c14.6 0 27.4-8 34.2-19.8l-12.9-7.6z"/></svg>
         <svg class="github" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128"><g fill="currentColor"><path fill-rule="evenodd" clip-rule="evenodd" d="M64 5.103c-33.347 0-60.388 27.035-60.388 60.388 0 26.682 17.303 49.317 41.297 57.303 3.017.56 4.125-1.31 4.125-2.905 0-1.44-.056-6.197-.082-11.243-16.8 3.653-20.345-7.125-20.345-7.125-2.747-6.98-6.705-8.836-6.705-8.836-5.48-3.748.413-3.67.413-3.67 6.063.425 9.257 6.223 9.257 6.223 5.386 9.23 14.127 6.562 17.573 5.02.542-3.903 2.107-6.568 3.834-8.076-13.413-1.525-27.514-6.704-27.514-29.843 0-6.593 2.36-11.98 6.223-16.21-.628-1.52-2.695-7.662.584-15.98 0 0 5.07-1.623 16.61 6.19C53.7 35 58.867 34.327 64 34.304c5.13.023 10.3.694 15.127 2.033 11.526-7.813 16.59-6.19 16.59-6.19 3.287 8.317 1.22 14.46.593 15.98 3.872 4.23 6.215 9.617 6.215 16.21 0 23.194-14.127 28.3-27.574 29.796 2.167 1.874 4.097 5.55 4.097 11.183 0 8.08-.07 14.583-.07 16.572 0 1.607 1.088 3.49 4.148 2.897 23.98-7.994 41.263-30.622 41.263-57.294C124.388 32.14 97.35 5.104 64 5.104z"/><path d="M26.484 91.806c-.133.3-.605.39-1.035.185-.44-.196-.685-.605-.543-.906.13-.31.603-.395 1.04-.188.44.197.69.61.537.91zm2.446 2.729c-.287.267-.85.143-1.232-.28-.396-.42-.47-.983-.177-1.254.298-.266.844-.14 1.24.28.394.426.472.984.17 1.255zM31.312 98.012c-.37.258-.976.017-1.35-.52-.37-.538-.37-1.183.01-1.44.373-.258.97-.025 1.35.507.368.545.368 1.19-.01 1.452zm3.261 3.361c-.33.365-1.036.267-1.552-.23-.527-.487-.674-1.18-.343-1.544.336-.366 1.045-.264 1.564.23.527.486.686 1.18.333 1.543zm4.5 1.951c-.147.473-.825.688-1.51.486-.683-.207-1.13-.76-.99-1.238.14-.477.823-.7 1.512-.485.683.206 1.13.756.988 1.237zm4.943.361c.017.498-.563.91-1.28.92-.723.017-1.308-.387-1.315-.877 0-.503.568-.91 1.29-.924.717-.013 1.306.387 1.306.88zm4.598-.782c.086.485-.413.984-1.126 1.117-.7.13-1.35-.172-1.44-.653-.086-.498.422-.997 1.122-1.126.714-.123 1.354.17 1.444.663zm0 0"/></g></svg>
-
       </div>
     </article>
 
@@ -79,7 +73,7 @@
         <h2 class="about-title">Olá, me chamo Leonardo!</h2>
         <p>Sou um jovem completamente apaixonado por tecnologia, especialmente
           Front-End. Atualmente estou buscando uma oportunidade de ingressar
-          nessa área tão cobiçada. Tenho estudado e praticado muito, com o
+          nessa área tão sonhada. Tenho estudado e praticado muito, com o
           objetivo de me aperfeiçoar nas tecnologias mais mordernas. Estou
           muito confiante em minhas habilidades e me sinto pronto para dar o
           próximo passo.</p>
@@ -101,8 +95,9 @@
     <article id="contact" class="contact-container">
       <div class="contact-info">
         <h1>E aí, vamos trabalhar juntos?</h1>
-        <p>Escolha a rede social e converse comigo :)</p>
-        <i class="fa-brands fa-whatsapp whats-icon"><span class="whats-number"> (48) 98405-2423</span></i>
+        <p>Escolha a rede social e converse comigo <span class="smile">;)</span></p>
+        <i class="fa-brands fa-whatsapp whats-icon"></i><span class="whats-number"> (48) 98405-2423</span><br>
+        <i class="fa-solid fa-envelope email-icon"></i><span class="email"> Leonardomscontato@gmail.com</span>
         <div class="contact-list">
           <a target="_blank" href="https://www.linkedin.com/in/leonardo-mello-silvestri-941504151/"><i class="fa-brands fa-linkedin"></i></a>
           <a target="_blank" href="https://github.com/LeonardoMelloSilvestri"><i class="fa-brands fa-github"></i></a>
@@ -118,5 +113,12 @@
   <footer>
     <small>Created by Leonardo</small>
   </footer>
+
+  <script>
+    function toTop() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
+      }
+  </script>
 </body>
 </html>
